; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet6/extr_ip6_mroute.c_X_mrt6_ioctl.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet6/extr_ip6_mroute.c_X_mrt6_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sioc_sg_req6 = type { i32 }
%struct.sioc_mif_req6 = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @X_mrt6_ioctl(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %6 = load i32, i32* @EINVAL, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i32, i32* %3, align 4
  switch i32 %7, label %16 [
    i32 128, label %8
    i32 129, label %12
  ]

8:                                                ; preds = %2
  %9 = load i64, i64* %4, align 8
  %10 = inttoptr i64 %9 to %struct.sioc_sg_req6*
  %11 = call i32 @get_sg_cnt(%struct.sioc_sg_req6* %10)
  store i32 %11, i32* %5, align 4
  br label %17

12:                                               ; preds = %2
  %13 = load i64, i64* %4, align 8
  %14 = inttoptr i64 %13 to %struct.sioc_mif_req6*
  %15 = call i32 @get_mif6_cnt(%struct.sioc_mif_req6* %14)
  store i32 %15, i32* %5, align 4
  br label %17

16:                                               ; preds = %2
  br label %17

17:                                               ; preds = %16, %12, %8
  %18 = load i32, i32* %5, align 4
  ret i32 %18
}

declare dso_local i32 @get_sg_cnt(%struct.sioc_sg_req6*) #1

declare dso_local i32 @get_mif6_cnt(%struct.sioc_mif_req6*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
